feature#10: projectInformation naw not hardcoded in html but sended by rest from backend, few desing changes, changes in start script to create or use ptyhon env

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,7 +3,7 @@
   <router-outlet></router-outlet>
 
 </div>
-<div style="padding: 50px"></div>
+<div class="separator-horizontal " style="padding-bottom: 135px"></div>
 <div>
   <app-footer></app-footer>
 </div>
