--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,7 +3,7 @@
   <router-outlet></router-outlet>
 
 </div>
-<div class="separator-horizontal " style="padding-bottom: 135px"></div>
+<div style="padding-bottom: 135px"></div>
 <div>
   <app-footer></app-footer>
 </div>
