--- a/frontend/src/app/meetings-list/meetings-list.component.html
+++ b/frontend/src/app/meetings-list/meetings-list.component.html
@@ -8,7 +8,7 @@
     <div *ngIf="!meetingsNotEmpty">
         <mat-spinner></mat-spinner>
     </div>
-    <div *ngIf="meetingsNotEmpty" class="my-list" >
+    <div *ngIf="meetingsNotEmpty" class="my-list">
         <table mat-table [dataSource]="meetingsList" class="mat-elevation-z8">
             <ng-container matColumnDef="meetingName">
                 <th mat-header-cell *matHeaderCellDef> Meeting name </th>
@@ -29,7 +29,8 @@
             <ng-container matColumnDef="deleteButton">
                 <th mat-header-cell *matHeaderCellDef> Delete </th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-mini-fab color="primary" [disabled]="!meetingsNotEmpty" aria-label="Delete" (click)="deleteMeeting(element.id)">
+                    <button mat-mini-fab color="primary" [disabled]="!meetingsNotEmpty" aria-label="Delete"
+                        (click)="deleteMeeting(element.id)">
                         <mat-icon>delete</mat-icon>
                     </button>
                 </td>
@@ -37,7 +38,8 @@
             <ng-container matColumnDef="editButton">
                 <th mat-header-cell *matHeaderCellDef> Edit </th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-mini-fab color="primary" [disabled]="!meetingsNotEmpty" aria-label="Edit" [routerLink]="['/edit-meeting', element.id]">
+                    <button mat-mini-fab color="primary" [disabled]="!meetingsNotEmpty" aria-label="Edit"
+                        [routerLink]="['/edit-meeting', element.id]">
                         <mat-icon>edit</mat-icon>
                     </button>
                 </td>
