--- a/frontend/src/app/meetings-list/meetings-list.component.html
+++ b/frontend/src/app/meetings-list/meetings-list.component.html
@@ -26,10 +26,19 @@
                 <th mat-header-cell *matHeaderCellDef> End date </th>
                 <td mat-cell *matCellDef="let element"> {{element.dateEnd | date:'dd.MM.yyyy HH:mm:ss' }} </td>
             </ng-container>
+            <ng-container matColumnDef="infoButton">
+                <th mat-header-cell *matHeaderCellDef> Info </th>
+                <td mat-cell *matCellDef="let element"
+                    (click)="meetingInfo(element.id)">
+                    <button mat-mini-fab [disabled]="!meetingsNotEmpty">
+                        <mat-icon>info_outline</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
             <ng-container matColumnDef="deleteButton">
                 <th mat-header-cell *matHeaderCellDef> Delete </th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-mini-fab color="primary" [disabled]="!meetingsNotEmpty" aria-label="Delete"
+                    <button mat-mini-fab [disabled]="!meetingsNotEmpty" aria-label="Delete"
                         (click)="deleteMeeting(element.id)">
                         <mat-icon>delete</mat-icon>
                     </button>
@@ -38,7 +47,7 @@
             <ng-container matColumnDef="editButton">
                 <th mat-header-cell *matHeaderCellDef> Edit </th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-mini-fab color="primary" [disabled]="!meetingsNotEmpty" aria-label="Edit"
+                    <button mat-mini-fab [disabled]="!meetingsNotEmpty" aria-label="Edit"
                         [routerLink]="['/edit-meeting', element.id]">
                         <mat-icon>edit</mat-icon>
                     </button>
