--- a/frontend/src/app/meetings-list/meetings-list.component.html
+++ b/frontend/src/app/meetings-list/meetings-list.component.html
@@ -8,56 +8,61 @@
     <div *ngIf="!meetingsNotEmpty">
         <mat-spinner></mat-spinner>
     </div>
-    <div *ngIf="meetingsNotEmpty" class="my-list">
-        <table mat-table [dataSource]="meetingsList" class="mat-elevation-z8">
-            <ng-container matColumnDef="meetingName">
-                <th mat-header-cell *matHeaderCellDef> Meeting name </th>
-                <td mat-cell *matCellDef="let element"> {{element.meetingName}} </td>
-            </ng-container>
-            <ng-container matColumnDef="meetingType">
-                <th mat-header-cell *matHeaderCellDef> Meeting type </th>
-                <td mat-cell *matCellDef="let element"> {{element.meetingType}} </td>
-            </ng-container>
-            <ng-container matColumnDef="dateStart">
-                <th mat-header-cell *matHeaderCellDef> Start date </th>
-                <td mat-cell *matCellDef="let element"> {{element.dateStart | date:'dd.MM.yyyy HH:mm:ss' }} </td>
-            </ng-container>
-            <ng-container matColumnDef="dateEnd">
-                <th mat-header-cell *matHeaderCellDef> End date </th>
-                <td mat-cell *matCellDef="let element"> {{element.dateEnd | date:'dd.MM.yyyy HH:mm:ss' }} </td>
-            </ng-container>
-            <ng-container matColumnDef="infoButton">
-                <th mat-header-cell *matHeaderCellDef> Info </th>
-                <td mat-cell *matCellDef="let element"
-                    (click)="meetingInfo(element.id)">
-                    <button mat-mini-fab [disabled]="!meetingsNotEmpty">
-                        <mat-icon>info_outline</mat-icon>
-                    </button>
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="deleteButton">
-                <th mat-header-cell *matHeaderCellDef> Delete </th>
-                <td mat-cell *matCellDef="let element">
-                    <button mat-mini-fab [disabled]="!meetingsNotEmpty" aria-label="Delete"
-                        (click)="deleteMeeting(element.id)">
-                        <mat-icon>delete</mat-icon>
-                    </button>
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="editButton">
-                <th mat-header-cell *matHeaderCellDef> Edit </th>
-                <td mat-cell *matCellDef="let element">
-                    <button mat-mini-fab [disabled]="!meetingsNotEmpty" aria-label="Edit"
-                        [routerLink]="['/edit-meeting', element.id]">
-                        <mat-icon>edit</mat-icon>
-                    </button>
-                </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+    <div *ngIf="meetingsNotEmpty">
+        <div class="my-list">
+            <table mat-table [dataSource]="meetingsList" class="mat-elevation-z8">
+                <ng-container matColumnDef="meetingName">
+                    <th mat-header-cell *matHeaderCellDef> Meeting name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.meetingName}} </td>
+                </ng-container>
+                <ng-container matColumnDef="meetingType">
+                    <th mat-header-cell *matHeaderCellDef> Meeting type </th>
+                    <td mat-cell *matCellDef="let element"> {{element.meetingType}} </td>
+                </ng-container>
+                <ng-container matColumnDef="dateStart">
+                    <th mat-header-cell *matHeaderCellDef> Start date </th>
+                    <td mat-cell *matCellDef="let element"> {{element.dateStart | date:'dd.MM.yyyy HH:mm:ss' }} </td>
+                </ng-container>
+                <ng-container matColumnDef="dateEnd">
+                    <th mat-header-cell *matHeaderCellDef> End date </th>
+                    <td mat-cell *matCellDef="let element"> {{element.dateEnd | date:'dd.MM.yyyy HH:mm:ss' }} </td>
+                </ng-container>
+                <ng-container matColumnDef="infoButton">
+                    <th mat-header-cell *matHeaderCellDef> Info </th>
+                    <td mat-cell *matCellDef="let element" (click)="meetingInfo(element.id)">
+                        <button mat-mini-fab [disabled]="!meetingsNotEmpty">
+                            <mat-icon>info_outline</mat-icon>
+                        </button>
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="deleteButton">
+                    <th mat-header-cell *matHeaderCellDef> Delete </th>
+                    <td mat-cell *matCellDef="let element">
+                        <button mat-mini-fab [disabled]="!meetingsNotEmpty" aria-label="Delete"
+                            (click)="deleteMeeting(element.id)">
+                            <mat-icon>delete</mat-icon>
+                        </button>
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="editButton">
+                    <th mat-header-cell *matHeaderCellDef> Edit </th>
+                    <td mat-cell *matCellDef="let element">
+                        <button mat-mini-fab [disabled]="!meetingsNotEmpty" aria-label="Edit"
+                            [routerLink]="['/edit-meeting', element.id]">
+                            <mat-icon>edit</mat-icon>
+                        </button>
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
     </div>
-
+    <div *ngIf="meetingsNotEmpty">
+        <mat-paginator [length]="recordsNumber" class="mat-elevation-z8 my-paginator" [pageSize]="10"
+            aria-label="Select page" (page)="handlePageChange($event)">
+        </mat-paginator>
+    </div>
     <div>
         <mat-error>{{errorMessage}}</mat-error>
     </div>
