--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -5,20 +5,20 @@ body {
   height: 100%;
   font-family: 'Roboto', sans-serif;
   margin: 0;
- 
+
 }
 
-*{
+* {
   text-shadow: 0px 5px 10px rgb(104, 104, 104, 0.3);
 }
 
-.top-items-grid{
+.top-items-grid {
   display: grid;
   grid-template-columns: auto auto auto;
   align-items: center;
 }
 
-.avatar-container{
+.avatar-container {
   display: flex;
   align-items: center;
   gap: 2px;
@@ -73,7 +73,7 @@ button.select-buttons.active {
   height: 3rem !important;
 }
 
-.wider-input > .mat-mdc-text-field-wrapper > .mat-mdc-form-field-flex > .mat-mdc-form-field-infix {
+.wider-input>.mat-mdc-text-field-wrapper>.mat-mdc-form-field-flex>.mat-mdc-form-field-infix {
   padding-top: 10px;
 }
 
@@ -106,7 +106,7 @@ ul {
   padding-left: 30px;
 }
 
-.padding-20px{
+.padding-20px {
   padding: 20px;
 }
 
@@ -134,6 +134,7 @@ ul {
   align-items: center;
   justify-content: start;
 }
+
 .centered-container {
   display: flex;
   flex-direction: column;
@@ -155,7 +156,7 @@ ul {
   padding-right: 0px;
 }
 
-.float-right{
+.float-right {
   float: right;
 }
 
@@ -226,7 +227,7 @@ app-tasks {
   border-color: black;
 }
 
-.wider-element.wider-container.wider-box.grey-box-shadow{
+.wider-element.wider-container.wider-box.grey-box-shadow {
   box-shadow: 0px 0px 5px 1px #616161;
 }
 
@@ -234,20 +235,21 @@ app-tasks {
   transform: scale(0.7);
 }
 
-.header{
+.header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-top: 20px;
 }
 
-.my-list-container{
+.my-list-container {
   display: grid;
   place-items: center;
   padding: 5px;
+  border-radius: 10px;
 }
 
-.my-list{
+.my-list {
   width: 80%;
 }
 
@@ -260,30 +262,38 @@ app-tasks {
   .main-container {
     display: inline;
   }
-  .side-menu{
+
+  .side-menu {
     margin-left: 100px;
   }
-  .main-menu{
+
+  .main-menu {
     margin-left: 20px;
   }
-  .side-menu{
+
+  .side-menu {
     margin-left: 20px;
   }
-  .meeting-form{
+
+  .meeting-form {
     margin-left: 0px;
-    
+
   }
+
   .calendar-container {
     display: inline;
   }
-  .wider-input{
+
+  .wider-input {
     width: 100%;
     padding: 0%;
   }
-  .my-list{
+
+  .my-list {
     width: 100%;
   }
-  .top-items-grid{
+
+  .top-items-grid {
     display: grid;
     grid-template-columns: auto;
     align-items: center;
@@ -291,18 +301,19 @@ app-tasks {
 }
 
 @media only screen and (min-width: 1300px) {
-  .main-menu{
+  .main-menu {
     margin-left: 10%;
   }
 }
 
 @media only screen and (min-width: 1400px) {
-  .main-menu{
+  .main-menu {
     margin-left: 15%;
   }
 }
+
 @media only screen and (min-width: 1700px) {
-  .main-menu{
+  .main-menu {
     margin-left: 20%;
   }
 }
