--- a/frontend/src/app/new-meeting-page/new-meeting/new-meeting.component.html
+++ b/frontend/src/app/new-meeting-page/new-meeting/new-meeting.component.html
@@ -44,7 +44,7 @@
         </div>
         <mat-error *ngIf="(form.get('dateStart')?.errors?.['endBeforeBeginning'] || form.get('dateEnd')?.errors?.['endBeforeBeginning']) 
           && !form.get('dateStart')?.pristine && !form.get('dateEnd')?.pristine">
-          The start date cannot be earlier than the end date
+          The end date cannot be earlier than the start date
         </mat-error>
         <mat-error
           *ngIf="form.get('dateStart')?.hasError('noStartingTime') && (!form.get('dateStart')?.pristine || !form.get('dateEnd')?.pristine)">
@@ -107,23 +107,6 @@
         <p>Documents attached to the meeting</p>
         <div class="select-buttons-grup">
           <div>
-            <ng-container *ngIf="form.get('addedDocuments')?.value != null">
-              <h4 class="list-header">Added Files :</h4>
-              <ul class="wider-element wider-container wider-box list-container">
-                <li *ngFor="let doc of form.get('addedDocuments')?.value; let i = index">
-                  <div class="avatar-container text-listcontainter diplay-flex">
-                    <mat-icon class="file-icon" fontIcon="file_copy"></mat-icon>
-                    <p>{{ doc.name }}</p>
-                    <button mat-icon-button matSuffix (click)="fileDownloadService.downloadAddedFile(doc)">
-                      <mat-icon>download</mat-icon>
-                    </button>
-                    <button mat-icon-button matSuffix (click)="deleteDocs(i)">
-                      <mat-icon>clear</mat-icon>
-                    </button>
-                  </div>
-                </li>
-              </ul>
-            </ng-container>
             <ng-container *ngIf="form.get('attachedDocuments')?.value != null">
               <h4 class="list-header">Attached Files :</h4>
               <ul class="wider-element wider-container wider-box list-container">
@@ -141,7 +124,23 @@
                 </li>
               </ul>
             </ng-container>
-
+            <ng-container *ngIf="form.get('addedDocuments')?.value != null">
+              <h4 class="list-header">Added Files :</h4>
+              <ul class="wider-element wider-container wider-box list-container">
+                <li *ngFor="let doc of form.get('addedDocuments')?.value; let i = index">
+                  <div class="avatar-container text-listcontainter diplay-flex">
+                    <mat-icon class="file-icon" fontIcon="file_copy"></mat-icon>
+                    <p>{{ doc.name }}</p>
+                    <button mat-icon-button matSuffix (click)="fileDownloadService.downloadAddedFile(doc)">
+                      <mat-icon>download</mat-icon>
+                    </button>
+                    <button mat-icon-button matSuffix (click)="deleteDocs(i)">
+                      <mat-icon>clear</mat-icon>
+                    </button>
+                  </div>
+                </li>
+              </ul>
+            </ng-container>
           </div>
           <input type="file" #addDocument style="display: none"
             (change)="onFileSelected($event, FileType.AddDocument)" />
