--- a/frontend/src/app/edit-meeting-page/edit-meeting-page.component.html
+++ b/frontend/src/app/edit-meeting-page/edit-meeting-page.component.html
@@ -6,7 +6,10 @@
     <h2 *ngIf="!foundMeeting">Not found meeting with id №{{editedMeetingId}}</h2>
     <div class="near-button-container gap-20px">
         <button mat-stroked-button href="http://localhost/" (click)="saveDraft()">Save as draft</button>
-        <button mat-stroked-button (click)="saveAndPublish()">Save & Publish</button>
+        <button mat-stroked-button
+        (click)="saveAndPublish()"
+        [disabled]="formDisabled"
+        >Save & Publish</button>
     </div>
 </div>
 <div class="separator-horizontal margin-top-10px" style></div>
