--- a/frontend/src/app/dialog-list/dialog-list.component.css
+++ b/frontend/src/app/dialog-list/dialog-list.component.css
@@ -1,57 +1,63 @@
-.container-flex {
+.main-dialog {
+  padding: 10px;
+  font-family: Arial, sans-serif;
+}
+
+.line-items {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.list-items {
+  overflow-y: auto;
+  border: 1px solid #ccc;
+  padding: 0px 10px 0px 10px;
+  border-radius: 5px;
+}
+
+.label-cus {
   padding: 10px;
 }
 
-.example-list {
-  /* width: 500px; */
-  /* max-width: 80%; */
-  width: 19rem;
-  border: solid 1px #ccc;
-  /* min-height: 60px; */
-  display: block;
-  background: white;
-  border-radius: 4px;
-  overflow: hidden;
+.container {
+  padding: 10px 0px 10px 0px;
 }
 
-.example-box {
-  /* padding: 10px 10px; */
-  padding: 0px 10px;
-  border-bottom: solid 1px #ccc;
-  color: rgba(0, 0, 0, 0.87);
+.bottom-input {
+  padding: 10px 0px 0px 0px;
+}
+
+.center {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
+}
+
+.box {
+  display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 0px;
+  border-bottom: 1px solid #eee;
+}
+
+.custom-input {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  width: 80%;
   box-sizing: border-box;
-  cursor: move;
-  background: white;
-  font-size: 14px;
 }
 
-.cdk-drag-preview {
+.top-input {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 18px;
+  width: 100%;
   box-sizing: border-box;
-  border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-    0 8px 10px 1px rgba(0, 0, 0, 0.14),
-    0 3px 14px 2px rgba(0, 0, 0, 0.12);
-}
-
-.cdk-drag-placeholder {
-  opacity: 0;
-}
-
-.cdk-drag-animating {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.example-box:last-child {
-  border: none;
-}
-
-.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
