--- a/frontend/src/app/edit-meeting-page/edit-meeting-page.component.html
+++ b/frontend/src/app/edit-meeting-page/edit-meeting-page.component.html
@@ -2,8 +2,8 @@
     <div class="padding-left-30px">
         <button mat-icon-button matSuffix routerLink="/home"><mat-icon>keyboard_backspace</mat-icon></button>
     </div>
-    <h2 *ngIf="foundMeeting">Edit Meeting № {{editedMeetingId}}</h2>
-    <h2 *ngIf="!foundMeeting">Not found meeting with id №{{editedMeetingId}}</h2>
+    <h2 *ngIf="!getMeetingError">Edit Meeting № {{editedMeetingId}}</h2>
+    <h2 *ngIf="getMeetingError">Not found meeting with id №{{editedMeetingId}}</h2>
     <div class="near-button-container gap-20px">
         <button mat-stroked-button href="http://localhost/" (click)="saveDraft()">Save as draft</button>
         <button mat-stroked-button
@@ -13,10 +13,6 @@
     </div>
 </div>
 <div class="separator-horizontal margin-top-10px" style></div>
-<div *ngIf="!foundMeeting && !getMeetingError" class="centered-top-container padding-20px">
-    <mat-icon>warning</mat-icon>
-    <h2>The meeting with the specified ID cannot be found</h2>
-</div>
 <div *ngIf="getMeetingError" class="centered-top-container padding-20px">
     <mat-icon>warning</mat-icon>
     <h2>{{getMeetingError}}</h2>
@@ -24,7 +20,7 @@
 <div *ngIf="loadingMeeting" class="centered-top-container padding-20px">
     <mat-spinner></mat-spinner>
 </div>
-<div *ngIf="foundMeeting && !getMeetingError && !loadingMeeting">
+<div *ngIf="!getMeetingError && !loadingMeeting">
     <div class="main-container">
         <div class="main-menu">
             <app-new-meeting [editedMeeting]="editedMeeting" (formEmiter)="reciveForm($event)"></app-new-meeting>
