bugfix#24: corected css in create new task and tasks list, fixed problem with linked inforamtion hidden and visible when one accoridon of task was open, remooved button save as draft commented all function connected to him, removed globalGetError form service, corrected typos, and many more

--- a/frontend/src/app/dialog-list/dialog-list.component.html
+++ b/frontend/src/app/dialog-list/dialog-list.component.html
@@ -3,7 +3,8 @@
     <form [formGroup]="form">
         <div mat-dialog-content>
             <div class="center">
-                <input matInput class="custom-input top-input" matInput type="text" formControlName="agendaName" placeholder="Agenda Name">
+                <input matInput class="custom-input top-input" matInput type="text" formControlName="agendaName"
+                    placeholder="Agenda Name">
             </div>
             <div class="container">
                 <div *ngIf="list.length > 0">
@@ -30,7 +31,7 @@
                 </button>
 
             </div>
-            <div class="flex-box-space">
+            <div class="flex-box-space-right">
                 <button mat-stroked-button class="main-container select-buttons" [mat-dialog-close]="form"
                     [disabled]="form.invalid">Create</button>
                 <button mat-stroked-button class="main-container select-buttons" mat-dialog-close
