--- a/frontend/src/app/dialog-form/dialog-form.component.html
+++ b/frontend/src/app/dialog-form/dialog-form.component.html
@@ -1,10 +1,12 @@
 <div>
-    <h1 mat-dialog-title>{{ title }}</h1>
+    <div class="centered-container">
+        <h1 mat-dialog-title>{{ title }}</h1>
+    </div>
     <form class="flex-box-space" [formGroup]="form">
-        <div mat-dialog-content>
-            <div class="wider-element wider-container wider-box lower-input" *ngFor="let field of fields">
-                <label class="">{{ field }} </label>
-                <input class="float-right" matInput type="text" [formControlName]="field">
+        <div mat-dialog-content class="mat-dailog-cont">
+            <div class="wider-element wider-container wider-box lower-input list-elements" *ngFor="let field of fields">
+                <label class="list-elements">{{ field }} </label>
+                <input class="task-input" matInput type="text" [formControlName]="field">
             </div>
             <div class="flex-box-space">
                 <button mat-stroked-button class="main-container select-buttons" [mat-dialog-close]="form.value"
