--- a/frontend/src/app/dialog-select/dialog-select.component.html
+++ b/frontend/src/app/dialog-select/dialog-select.component.html
@@ -12,7 +12,7 @@
     </div>
     <div *ngIf="!noAgendas">
         <mat-radio-group class="padding-container" [(ngModel)]="selectedAgenda">
-            <div class="flex-box-space" *ngFor="let agenda of agendaList">
+            <div class="flex-box-space-right" *ngFor="let agenda of agendaList">
                 <mat-accordion>
                     <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
                         <mat-expansion-panel-header>
@@ -25,7 +25,8 @@
                         </mat-expansion-panel-header>
                         <mat-list role="list">
                             <p class="list-title">Order:</p>
-                            <mat-list-item class="lower-list-items" role="listitem" *ngFor="let list of agenda.list; let idx = index">
+                            <mat-list-item class="lower-list-items" role="listitem"
+                                *ngFor="let list of agenda.list; let idx = index">
                                 <span class="caption">{{idx + 1}}. {{ list }}</span>
                             </mat-list-item>
                         </mat-list>
@@ -35,10 +36,9 @@
             </div>
         </mat-radio-group>
     </div>
-    <div class="flex-box-space">
+    <div class="flex-box-space-right">
         <button mat-stroked-button class="main-container select-buttons" [mat-dialog-close]="selectedAgenda"
             [disabled]="!selectedAgenda">Select</button>
-        <button mat-stroked-button class="main-container select-buttons" mat-dialog-close
-            type="button">Close</button>
+        <button mat-stroked-button class="main-container select-buttons" mat-dialog-close type="button">Close</button>
     </div>
 </mat-dialog-content>
