--- a/frontend/src/app/edit-meeting-page/edit-meeting-page.component.html
+++ b/frontend/src/app/edit-meeting-page/edit-meeting-page.component.html
@@ -1,15 +1,19 @@
 <div class="top-items-grid">
     <div class="padding-left-30px">
-        <button mat-icon-button matSuffix routerLink="/home"><mat-icon>keyboard_backspace</mat-icon></button>
+        <button mat-icon-button matSuffix
+            routerLink="/home"><mat-icon>keyboard_backspace</mat-icon></button>
     </div>
     <h2 *ngIf="!getMeetingError">Edit Meeting № {{editedMeetingId}}</h2>
-    <h2 *ngIf="getMeetingError">Not found meeting with id №{{editedMeetingId}}</h2>
-    <div class="near-button-container gap-20px">
-        <button mat-stroked-button href="http://localhost/" (click)="saveDraft()">Save as draft</button>
-        <button mat-stroked-button
-        (click)="saveAndPublish()"
-        [disabled]="formDisabled"
-        >Save & Publish</button>
+    <h2 *ngIf="getMeetingError">Not found meeting with id
+        №{{editedMeetingId}}</h2>
+    <div class="near-button-container gap-20px"
+        matTooltip="Fields Meeting Name, Meeting Type, one Location type, date and time are mandatory to unlock"
+        [matTooltipDisabled]="!formDisabled">
+        <!-- <button mat-stroked-button href="http://localhost/" (click)="saveDraft()">Save as draft</button> -->
+        <!-- saveDraft - coming soon -->
+        <button mat-stroked-button (click)="saveAndPublish()"
+            [disabled]="formDisabled">
+            Save & Publish</button>
     </div>
 </div>
 <div class="separator-horizontal margin-top-10px" style></div>
@@ -23,11 +27,13 @@
 <div *ngIf="!getMeetingError && !loadingMeeting">
     <div class="main-container">
         <div class="main-menu">
-            <app-new-meeting [editedMeeting]="editedMeeting" (formEmiter)="reciveForm($event)"></app-new-meeting>
+            <app-new-meeting [editedMeeting]="editedMeeting"
+                (formEmitter)="receiveForm($event)"></app-new-meeting>
         </div>
         <div class="separator-vertical"></div>
         <div class="side-menu">
-            <app-tasks [initialTasks]="editedTasks" (tasksListOutput)="saveTasksList($event)"></app-tasks>
+            <app-tasks [initialTasks]="editedTasks"
+                (tasksListOutput)="saveTasksList($event)"></app-tasks>
             <app-invites [invitedToEdited]="invitedToEdited"></app-invites>
         </div>
     </div>
