--- a/frontend/src/app/new-meeting-page/tasks/tasks.component.html
+++ b/frontend/src/app/new-meeting-page/tasks/tasks.component.html
@@ -1,31 +1,36 @@
-<div class="" style="max-width: 500px;">
-  <div class="flex-box-space">
-    <h2>
-      Tasks
-    </h2>
+<div class="container" style="max-width: 500px;">
+  <div class="flex-box-space-right">
+    <h2>Tasks</h2>
     <button mat-stroked-button class="near-button-container gap-0"
-      (click)="newTask('New Task', ['Name', 'Description'])">New Task</button>
+      (click)="newTask('New Task', ['Name', 'Description'])">
+      New Task
+    </button>
   </div>
   <div class="div-list">
-    <!-- <ul> -->
-    <mat-expansion-panel *ngFor="let task of tasksList; let i = index" (opened)="panelOpenState = true"
-      (closed)="panelOpenState = false">
+    <mat-expansion-panel *ngFor="let task of tasksList; let i = index"
+      (opened)="panelOpenStates[i] = true"
+      (closed)="panelOpenStates[i] = false">
       <mat-expansion-panel-header>
         <mat-panel-title style="flex-grow: 2">
           {{ task.name }}
         </mat-panel-title>
         <mat-panel-description>
-          Description: {{panelOpenState ? 'visible' : 'hidden'}}
+          Description: {{panelOpenStates[i] ? 'visible' : 'hidden'}}
         </mat-panel-description>
-        <button mat-icon-button matSuffix (click)="editTask('Edit Task', task , ['Name', 'Description'])">
+        <button mat-icon-button matSuffix
+          (click)="editTask('Edit Task', task, ['Name', 'Description'], $event)">
           <mat-icon>edit_note</mat-icon>
         </button>
-        <button mat-icon-button matSuffix (click)="clearInput(i)">
+        <button mat-icon-button matSuffix (click)="clearInput(i, $event)">
           <mat-icon>clear</mat-icon>
         </button>
       </mat-expansion-panel-header>
-      <p class="lower-list-items" *ngIf="task.description" class="caption"> {{ task.description }} </p>
-      <p class="lower-list-items" *ngIf="!task.description" class="caption"> No task description </p>
+      <p class="lower-list-items" *ngIf="task.description"
+        class="caption indent">{{
+        task.description }}</p>
+      <p class="lower-list-items" *ngIf="!task.description"
+        class="caption indent">No
+        task description</p>
     </mat-expansion-panel>
   </div>
 </div>
