bugfix#25: changed some css and html to close elements more i visual boxes with shadows,  changed accent pallete, added redirection after add or edit meeting with snackBar informing that operation is finished with success or error

--- a/frontend/src/app/new-meeting-page/new-meeting-page.component.html
+++ b/frontend/src/app/new-meeting-page/new-meeting-page.component.html
@@ -4,8 +4,8 @@
       <mat-icon>keyboard_backspace</mat-icon>
     </button>
   </div>
-  <h2>Create new meeting</h2>
-  <div class="near-button-container gap-20px"
+  <h2 class="padding-20px">Create new meeting</h2>
+  <div class="near-button-container gap-20px padding-20px"
     matTooltip="Fields Meeting Name, Meeting Type, one Location type, date and time are mandatory to unlock"
     [matTooltipDisabled]="!formDisabled">
     <!-- <button mat-stroked-button href="http://localhost/" (click)="saveDraft()">Save as draft</button> -->
