--- a/frontend/src/app/new-meeting-page/tasks/tasks.component.html
+++ b/frontend/src/app/new-meeting-page/tasks/tasks.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="max-width: 500px;">
+<mat-card-content class="container main-card" style="max-width: 500px;">
   <div class="flex-box-space-right">
     <h2>Tasks</h2>
     <button mat-stroked-button class="near-button-container gap-0"
@@ -33,4 +33,4 @@
         task description</p>
     </mat-expansion-panel>
   </div>
-</div>
+</mat-card-content>
