--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h2 class="padding-20px">Board Meetings App</h2>
+  <h2 class="app-name">Board Meetings App</h2>
   <router-outlet></router-outlet>
 
 </div>
