--- a/frontend/src/app/edit-meeting-page/edit-meeting-page.component.html
+++ b/frontend/src/app/edit-meeting-page/edit-meeting-page.component.html
@@ -3,15 +3,17 @@
         <button mat-icon-button matSuffix
             routerLink="/home"><mat-icon>keyboard_backspace</mat-icon></button>
     </div>
-    <h2 *ngIf="!getMeetingError">Edit Meeting № {{editedMeetingId}}</h2>
-    <h2 *ngIf="getMeetingError">Not found meeting with id
+    <h2 *ngIf="!getMeetingError" class="padding-20px">Edit Meeting №
+        {{editedMeetingId}}</h2>
+    <h2 *ngIf="getMeetingError" class="padding-20px">Not found meeting with id
         №{{editedMeetingId}}</h2>
     <div class="near-button-container gap-20px"
         matTooltip="Fields Meeting Name, Meeting Type, one Location type, date and time are mandatory to unlock"
         [matTooltipDisabled]="!formDisabled">
         <!-- <button mat-stroked-button href="http://localhost/" (click)="saveDraft()">Save as draft</button> -->
         <!-- saveDraft - coming soon -->
-        <button mat-stroked-button (click)="saveAndPublish()"
+        <button mat-stroked-button class="padding-20px"
+            (click)="saveAndPublish()"
             [disabled]="formDisabled">
             Save & Publish</button>
     </div>
