--- a/frontend/src/app/new-meeting-page/invites/invites.component.html
+++ b/frontend/src/app/new-meeting-page/invites/invites.component.html
@@ -1,18 +1,22 @@
-<div>
-    <div class="flex-box-space-right">
-        <h2>Invites</h2>
-    </div>
-    <div class="main-container gap-1rem">
-        <mat-tab-group class="mat-tab-labels" style="width: 27rem;">
-            <mat-tab label="Board">
-                <div class="separator-forInvates"></div>
-                <br>
-                <app-board [initialPersonsList]="initialPersonsList" [invitedToEdited]="invitedToEdited"></app-board>
-            </mat-tab>
-            <mat-tab label="Guests">
-                <div class="separator-forInvates"></div>
-                <br>
-                <app-guests></app-guests>
-            </mat-tab>
-        </mat-tab-group>
-    </div>
+<div class="invites-container">
+    <mat-card-content class="main-card">
+        <div class="flex-box-space-right">
+            <h2>Invites</h2>
+        </div>
+        <div class="main-container gap-1rem">
+            <mat-tab-group class="mat-tab-labels" style="width: 27rem;">
+                <mat-tab label="Board">
+                    <div class="separator-forInvates"></div>
+                    <br>
+                    <app-board [initialPersonsList]="initialPersonsList"
+                        [invitedToEdited]="invitedToEdited"></app-board>
+                </mat-tab>
+                <mat-tab label="Guests">
+                    <div class="separator-forInvates"></div>
+                    <br>
+                    <app-guests></app-guests>
+                </mat-tab>
+            </mat-tab-group>
+        </div>
+    </mat-card-content>
+</div>
