--- a/frontend/src/app/shared/datepicker/datepicker.component.css
+++ b/frontend/src/app/shared/datepicker/datepicker.component.css
@@ -1,37 +1,43 @@
-
-
-.mat-mdc-text-field-wrapper.mdc-text-field .mdc-text-field--filled .mdc-text-field--no-label{
-    height: 3rem!important;
-    width: 85px!important;
+.mat-mdc-text-field-wrapper.mdc-text-field .mdc-text-field--filled .mdc-text-field--no-label {
+    height: 3rem !important;
+    width: 85px !important;
 }
 
 .mat-mdc-input-element.input-time {
     text-align: center;
 }
 
-.custom-time-input{
+.custom-time-input {
     margin-left: 10px;
     width: 85px;
 }
 
-.input-time{
+.input-time {
     padding: 0px;
 }
 
-.mat-mdc-icon-button.mat-mdc-button-base{
-    padding-top: 2px!important;
+.mat-mdc-icon-button.mat-mdc-button-base {
+    padding-top: 2px !important;
 }
-.mdc-icon-button .mat-mdc-icon-button .mat-unthemed .mat-mdc-button-base{
+
+.mdc-icon-button .mat-mdc-icon-button .mat-unthemed .mat-mdc-button-base {
     padding-top: 8px;
 }
 
-.mat-mdc-icon-button.mat-mdc-button-base{
+.mat-mdc-icon-button.mat-mdc-button-base {
     padding-top: 10px;
 }
 
-.calendar-field{
+.calendar-field {
     height: 4rem;
 }
-::ng-deep .calendar-field > .mat-mdc-text-field-wrapper > .mat-mdc-form-field-flex >.mat-mdc-form-field-icon-suffix.ng-star-inserted{
-    margin-top: -5px!important;
+
+::ng-deep .calendar-field>.mat-mdc-text-field-wrapper>.mat-mdc-form-field-flex>.mat-mdc-form-field-icon-suffix.ng-star-inserted {
+    margin-top: -5px !important;
+}
+
+@media only screen and (max-width: 300px) {
+    .calendar-field {
+        width: 96%;
+    }
 }
