--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -5,11 +5,15 @@ body {
   height: 100%;
   font-family: 'Roboto', sans-serif;
   margin: 0;
-
+  background: linear-gradient(90deg, rgb(172, 192, 255, 0.8) 0%, rgba(255, 255, 255, 1) 3%, rgba(255, 255, 255, 1) 97%, rgb(172, 192, 255, 0.8) 100%);
 }
 
 * {
   text-shadow: 0px 5px 10px rgb(104, 104, 104, 0.3);
+}
+
+.app-name {
+  padding: 20px 20px 20px 50px;
 }
 
 .top-items-grid {
@@ -48,15 +52,16 @@ button.select-buttons.active {
 .wider-input {
   background-color: white;
   height: 4rem;
-  width: 88%;
+  width: 95%;
 }
 
 .meeting-form {
-  padding: 20px;
+  width: 38rem;
+  padding: 20px 20px 20px 0px;
 }
 
 .side-menu {
-  margin-left: 40px;
+  max-width: 500px;
   padding: 20px;
   flex: 4;
 }
@@ -110,8 +115,8 @@ ul {
 }
 
 .wider-element.wider-container.wider-box {
-  width: 88%;
-  min-width: 300px;
+  width: 95%;
+  /* min-width: 300px; */
   max-width: 800px;
 }
 
@@ -186,12 +191,12 @@ app-tasks {
 
 .separator-vertical {
   width: 2px;
-  background-color: gainsboro;
+  /* background-color: gainsboro; */
+  background-color: var(--my-accent-color);
 }
 
 .separator-25rem-width {
-
-  background-color: gainsboro;
+  background-color: var(--my-accent-color);
   height: 2px;
   margin-left: -30px;
   margin-bottom: 15px;
@@ -199,13 +204,13 @@ app-tasks {
 
 .separator-forInvates {
 
-  background-color: gainsboro;
+  background-color: var(--my-accent-color);
   height: 3px;
   margin-top: -1px;
 }
 
 .separator-horizontal {
-  background-color: gainsboro;
+  background-color: var(--my-accent-color);
   height: 2px;
 }
 
@@ -265,26 +270,27 @@ app-tasks {
   box-sizing: border-box;
 }
 
+.main-card {
+  border-radius: 10px;
+  box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1)
+}
+
 @media only screen and (max-width: 1000px) {
   .main-container {
     display: inline;
   }
 
-  .side-menu {
-    margin-left: 100px;
+  .app-name {
+    padding: 20px;
   }
 
   .main-menu {
     margin-left: 20px;
   }
 
-  .side-menu {
-    margin-left: 20px;
-  }
-
   .meeting-form {
     margin-left: 0px;
-
+    width: 95%;
   }
 
   .calendar-container {
@@ -292,7 +298,7 @@ app-tasks {
   }
 
   .wider-input {
-    width: 100%;
+    width: 95%;
     padding: 0%;
   }
 
