--- a/frontend/src/app/edit-meeting-page/edit-meeting-page.component.html
+++ b/frontend/src/app/edit-meeting-page/edit-meeting-page.component.html
@@ -18,7 +18,10 @@
             Save & Publish</button>
     </div>
 </div>
-<div class="separator-horizontal margin-top-10px" style></div>
+<div class="centered-container ">
+    <div class="separator-horizontal margin-top-10px" style></div>
+</div>
+
 <div *ngIf="getMeetingError" class="centered-top-container padding-20px">
     <mat-icon>warning</mat-icon>
     <h2>{{getMeetingError}}</h2>
