--- a/frontend/src/app/new-meeting-page/new-meeting-page.component.html
+++ b/frontend/src/app/new-meeting-page/new-meeting-page.component.html
@@ -15,7 +15,9 @@
       Save & Publish</button>
   </div>
 </div>
-<div class="separator-horizontal margin-top-10px" style></div>
+<div class="centered-container ">
+  <div class="separator-horizontal margin-top-10px" style></div>
+</div>
 <div class="main-container">
   <div class="main-menu">
     <app-new-meeting [editedMeeting]="editedMeeting"></app-new-meeting>
