--- a/frontend/src/app/dialog-info/dialog-info.component.html
+++ b/frontend/src/app/dialog-info/dialog-info.component.html
@@ -20,34 +20,45 @@
                                     Meeting type: {{ meeting.meetingType }}
                                 </mat-list-item>
                                 <mat-list-item role="listitem">
-                                    Date start: {{ meeting.dateStart | date: 'dd-MM-yyyy, HH:mm' }}
+                                    Date start: {{ meeting.dateStart | date:
+                                    'dd-MM-yyyy, HH:mm' }}
                                 </mat-list-item>
                                 <mat-list-item role="listitem">
-                                    Date end: {{ meeting.dateEnd | date: 'dd-MM-yyyy, HH:mm' }}
+                                    Date end: {{ meeting.dateEnd | date:
+                                    'dd-MM-yyyy, HH:mm' }}
                                 </mat-list-item>
-                                <mat-list-item *ngIf="meeting.meetingAddress " role="listitem">
+                                <mat-list-item *ngIf="meeting.meetingAddress "
+                                    role="listitem">
                                     Location: {{ meeting.meetingAddress }}
                                 </mat-list-item>
-                                <mat-list-item *ngIf="meeting.onlineAddress" role="listitem">
+                                <mat-list-item *ngIf="meeting.onlineAddress"
+                                    role="listitem">
                                     Online address: {{ meeting.onlineAddress }}
                                 </mat-list-item>
                             </mat-list>
                         </div>
                         <mat-accordion *ngIf="meeting.agenda">
-                            <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+                            <mat-expansion-panel
+                                (opened)="panelOpenState = true"
+                                (closed)="panelOpenState = false">
                                 <mat-expansion-panel-header>
                                     <mat-panel-title>
                                         Agendas
                                     </mat-panel-title>
                                     <mat-panel-description>
-                                        {{panelOpenState ? 'Close Details' : 'Open Details'}}
+                                        {{panelOpenState ? 'Close Details' :
+                                        'Open Details'}}
                                     </mat-panel-description>
                                 </mat-expansion-panel-header>
                                 <mat-list role="list">
-                                    <mat-list-item>id: {{ meeting.agenda.id }}</mat-list-item>
-                                    <mat-list-item>title: {{ meeting.agenda.name }}</mat-list-item>
+                                    <mat-list-item>id: {{ meeting.agenda.id
+                                        }}</mat-list-item>
+                                    <mat-list-item>title: {{ meeting.agenda.name
+                                        }}</mat-list-item>
                                     <h4> Order: </h4>
-                                    <mat-list-item *ngFor="let order of meeting?.agenda?.list" role="listitem">
+                                    <mat-list-item
+                                        *ngFor="let order of meeting?.agenda?.order"
+                                        role="listitem">
                                         {{ order }}
                                     </mat-list-item>
                                 </mat-list>
@@ -55,18 +66,23 @@
                         </mat-accordion>
                         <mat-card *ngIf="meeting.attachedDocuments">
                             <mat-accordion>
-                                <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+                                <mat-expansion-panel
+                                    (opened)="panelOpenState = true"
+                                    (closed)="panelOpenState = false">
                                     <mat-expansion-panel-header>
                                         <mat-panel-title>
                                             Documnets
                                         </mat-panel-title>
                                         <mat-panel-description>
-                                            {{panelOpenState ? 'Close Details' : 'Open Details'}}
+                                            {{panelOpenState ? 'Close Details' :
+                                            'Open Details'}}
                                         </mat-panel-description>
                                     </mat-expansion-panel-header>
                                     <mat-list role="list">
-                                        <mat-list-item *ngFor="let doc of meeting.attachedDocuments">
-                                            <a class="link" (click)="fileDownloadService.downloadFileFromUrl(doc)">{{
+                                        <mat-list-item
+                                            *ngFor="let doc of meeting.attachedDocuments">
+                                            <a class="link"
+                                                (click)="fileDownloadService.downloadFileFromUrl(doc)">{{
                                                 doc.fileName }}</a><br>
                                         </mat-list-item>
                                     </mat-list>
@@ -78,11 +94,14 @@
                 <mat-tab label="Tasks">
                     <div>
                         <mat-list>
-                            <div *ngFor="let task of meeting.tasksList" class="element-container" role="listitem">
+                            <div *ngFor="let task of meeting.tasksList"
+                                class="element-container" role="listitem">
                                 <div class="center-contiener">
                                     <div class="columns-contiener">
-                                        <mat-list-item>Task name: {{ task.name }}</mat-list-item>
-                                        <mat-list-item>Description: {{ task?.description }}</mat-list-item>
+                                        <mat-list-item>Task name: {{ task.name
+                                            }}</mat-list-item>
+                                        <mat-list-item>Description: {{
+                                            task?.description }}</mat-list-item>
                                     </div>
                                 </div>
                                 <div class="center-contiener">
@@ -95,11 +114,14 @@
                 <mat-tab label="Guests">
                     <div>
                         <mat-list>
-                            <div *ngFor="let guest of meeting.guests" class="element-container" role="listitem">
+                            <div *ngFor="let guest of meeting.guests"
+                                class="element-container" role="listitem">
                                 <div class="center-contiener">
                                     <div class="columns-contiener">
-                                        <mat-list-item>Name: {{ guest.name }}</mat-list-item>
-                                        <mat-list-item>Surname: {{ guest.surname }}</mat-list-item>
+                                        <mat-list-item>Name: {{ guest.name
+                                            }}</mat-list-item>
+                                        <mat-list-item>Surname: {{ guest.surname
+                                            }}</mat-list-item>
                                     </div>
                                 </div>
                                 <div class="center-contiener">
