--- a/frontend/src/app/new-meeting-page/invites/invites.component.html
+++ b/frontend/src/app/new-meeting-page/invites/invites.component.html
@@ -6,13 +6,13 @@
         <div class="main-container gap-1rem">
             <mat-tab-group class="mat-tab-labels" style="width: 27rem;">
                 <mat-tab label="Board">
-                    <div class="separator-forInvates"></div>
+                    <div class="separator-forInvites"></div>
                     <br>
                     <app-board [initialPersonsList]="initialPersonsList"
                         [invitedToEdited]="invitedToEdited"></app-board>
                 </mat-tab>
                 <mat-tab label="Guests">
-                    <div class="separator-forInvates"></div>
+                    <div class="separator-forInvites"></div>
                     <br>
                     <app-guests></app-guests>
                 </mat-tab>
