--- a/frontend/src/app/new-meeting-page/invites/invites.component.html
+++ b/frontend/src/app/new-meeting-page/invites/invites.component.html
@@ -3,7 +3,7 @@
         <div class="flex-box-space-right">
             <h2>Invites</h2>
         </div>
-        <div class="main-container gap-1rem">
+        <div>
             <mat-tab-group class="mat-tab-labels" style="width: 27rem;">
                 <mat-tab label="Board">
                     <div class="separator-forInvites"></div>
