--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -5,7 +5,7 @@ body {
   height: 100%;
   font-family: 'Roboto', sans-serif;
   margin: 0;
-  background: linear-gradient(90deg, rgb(172, 192, 255, 0.8) 0%, rgba(255, 255, 255, 1) 3%, rgba(255, 255, 255, 1) 97%, rgb(172, 192, 255, 0.8) 100%);
+  background: linear-gradient(90deg, rgba(172, 191, 255, 0.3) 0%, rgba(255, 255, 255, 1) 3%, rgba(255, 255, 255, 1) 97%, rgb(172, 192, 255, 0.3) 100%);
 }
 
 * {
@@ -131,6 +131,11 @@ ul {
 .main-container {
   display: flex;
   justify-content: center;
+  background-color: rgba(172, 191, 255, 0.3)
+}
+
+mat-card-content {
+  background-color: var(--my-primary-background-color);
 }
 
 .centered-top-container {
@@ -213,7 +218,7 @@ app-tasks {
 .separator-horizontal {
   background-color: var(--my-accent-color);
   height: 2px;
-  width: 95%;
+  width: 100%;
 }
 
 .mat-mdc-form-field-focus-overlay .ng-star-inserted {
